--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: glioma-seg-37
 channels:
   - anaconda
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -25,6 +26,7 @@ dependencies:
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.6=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
+  - dcm2niix
   - pip:
     - absl-py==1.3.0
     - astor==0.8.1
@@ -50,7 +52,7 @@ dependencies:
     - packaging==21.3
     - pandas==1.1.5
     - pillow==9.3.0
-    - protobuf==3.20.3
+    - protobuf==3.20 #.3
     - pyparsing==3.0.9
     - python-dateutil==2.8.2
     - pytz==2022.6
