--- a/environment.yml
+++ b/environment.yml
@@ -26,8 +26,9 @@ dependencies:
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.6=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
-  - dcm2niix
+  - dcm2niix=1.0.20211006
   - pip:
+    - python-gdcm==3.0.24.1
     - absl-py==1.3.0
     - astor==0.8.1
     - blinker==1.5
